--- a/index.html
+++ b/index.html
@@ -308,15 +308,16 @@
                 <div class="footer3">
                     <h3>KẾT NỐI</h3>
                     <ul>
-                        <!-- <li>
-                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FTienTien307&tabs=timeline&width=300&height=200&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200"
-                                style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-                        </li> -->
                         <li>
                             <a title="Facebook" href="#"><i class="fab fa-facebook-f"></i></a>
                             <a title="Instagram" href="#"><i class="fab fa-instagram"></i></a>
                             <a title="Twitter" href=""><i class="fab fa-twitter"></i></a></li>
                         </li>
+                        <li>
+                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPet-Shop-112643297260175&tabs=timeline&width=300&height=200&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300"
+                                height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                        </li>
+
                     </ul>
                 </div>
             </div>
