--- a/index.html
+++ b/index.html
@@ -227,38 +227,41 @@
     </div>
 
     <!-- counter -->
-    <div class="grid">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="counter-info">
-                    <h2>Nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu trên toàn quốc</h2>
-                    <p>
-                        Tại PetCare, chúng tôi tin rằng thú cưng của bạn phải được ở trong “môi trường tự do”, không căng thẳng với dịch vụ chăm sóc một kèm một mọi lúc. Đó là lý do tại sao chúng tôi cung cấp cho thú cưng trong nhà ngồi để thú cưng của bạn không bị căng thẳng
-                        về thể chất và tinh thần trong cũi, cơ sở nội trú hoặc nhà trẻ hoặc “khách sạn dành cho chó”, đồng thời đảm bảo rằng thú cưng của bạn có thể ở trong sự an toàn và thoải mái.
-                    </p>
+    <div class="counter">
+        <div class="grid">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="counter-info">
+                        <h2>Nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu trên toàn quốc</h2>
+                        <p>
+                            Tại PetCare, chúng tôi tin rằng thú cưng của bạn phải được ở trong “môi trường tự do”, không căng thẳng với dịch vụ chăm sóc một kèm một mọi lúc. Đó là lý do tại sao chúng tôi cung cấp cho thú cưng trong nhà ngồi để thú cưng của bạn không bị căng thẳng
+                            về thể chất và tinh thần trong cũi, cơ sở nội trú hoặc nhà trẻ hoặc “khách sạn dành cho chó”, đồng thời đảm bảo rằng thú cưng của bạn có thể ở trong sự an toàn và thoải mái.
+                        </p>
+                    </div>
+                    <div id="shiva">
+                        <span class="count">1620</span>
+                        <p>Khách hàng</p>
+                    </div>
+                    <div id="shiva">
+                        <span class="count">1546</span>
+                        <p>Phản hồi</p>
+                    </div>
+                    <div id="shiva">
+                        <span class="count">1853</span>
+                        <p>Thú cưng</p>
+                    </div>
+                    <!-- <div class="title">Khách hàng</div>
+                    <div class="title">Phản hồi</div>
+                    <div class="title">Thú cưng</div> -->
                 </div>
-                <div id="shiva">
-                    <span class="count">2120</span>
-                    <p>Khách hàng</p>
-                </div>
-                <div id="shiva">
-                    <span class="count">1946</span>
-                    <p>Phản hồi</p>
-                </div>
-                <div id="shiva">
-                    <span class="count">1853</span>
-                    <p>Thú cưng</p>
-                </div>
-                <!-- <div class="title">Khách hàng</div>
-                <div class="title">Phản hồi</div>
-                <div class="title">Thú cưng</div> -->
-            </div>
-            <div class="col-md-6">
-                <div class="counter-img">
-                    <img src="./image/counter.png" alt="">
+                <div class="col-md-6">
+                    <div class="counter-img">
+                        <img src="./image/counter.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
     <!-- footer -->
     <footer>
@@ -343,13 +346,6 @@
             <p>&copy; Copyright PetShop 2020</p>
         </div>
     </footer>
-
-
-
-
-
-
-
 
     <script src="./Bootstrap/jquery.min.js"></script>
     <script src="./Bootstrap/popper.min.js"></script>
