--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="header-menu" id="myHeader">
         <div class="grid">
             <ul>
-                <li><a class="color-menu" href="#">Trang chủ</a></li>
-                <li class="menu-cha"><a class="color-menu" href="#">Dịch vụ</a>
+                <li><a class="color-menu" href="./index.html">Trang chủ</a></li>
+                <li class="menu-cha"><a class="color-menu" href="./html/service.html">Dịch vụ</a>
                     <ul class="menu-con" id="menu-con">
                         <li>
                             <a href="#" class="color-menu">Cắt tỉa lông chó mèo </a>
