--- a/html/service.html
+++ b/html/service.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <div class="grid">
         <div class="header">
             <div class="header-left">
@@ -80,6 +81,126 @@
         </div>
     </div>
 
+    <!-- content -->
+    <div class="banner">
+        <img src="../image/service-banner.jpg" alt="">
+    </div>
+    <div class="booking">
+        <div class="grid">
+            <h2 class="title">Đặt lịch ngay</h2>
+            <form action="#" class="booking-form">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Nhập tên">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Số điện thoại">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <div class="select-wrap">
+                                <select name="" id="" class="form-control">
+                                <option value="">Chọn dịch vụ của bạn</option>
+                                <option value="">Tắm cho chó</option>
+                                <option value="">Tắm cho mèo</option>
+                                <option value="">Cắt tỉa lông cho chó</option>
+                                <option value="">Cắt tỉa lông cho mèo</option>
+                                <option value="">Kiểm tra sức khỏe</option>
+                                <option value="">Chó mèo tìm sen</option>
+                                <option value="">Các dịch vụ khác</option>
+                            </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <div class="input-wrap">
+                                <!-- <div class="icon"><span class="fa fa-calendar"></span></div> -->
+                                <input type="date" class="form-control appointment_date" placeholder="Ngày đặt lịch">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <div class="input-wrap">
+                                <!-- <div class="icon"><span class="fa fa-clock-o"></span></div> -->
+                                <input type="time" class="form-control appointment_time" placeholder="Thời gian">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <textarea name="" id="" cols="30" rows="1" class="form-control" placeholder="Để lại lời nhắn"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <input type="submit" value="Đặt lịch" class="btn-booking">
+                        </div>
+                    </div>
+
+                </div>
+            </form>
+
+        </div>
+    </div>
+    <div class="service">
+        <div class="grid">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="../image/service1.jpg" alt="">
+                    <div class="service1">
+                        <h3>Tắm cho chó</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="../image/service1.jpg" alt="">
+                    <div class="service1">
+                        <h3>Tắm cho mèo</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="../image/service1.jpg" alt="">
+                    <div class="service1">
+                        <h3>Kiểm tra sức khỏe</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="../image/service1.jpg" alt="">
+                    <div class="service1">
+                        <h3>Tắm cho chó</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="../image/service1.jpg" alt="">
+                    <div class="service1">
+                        <h3>Tắm cho chó</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="../image/service1.jpg" alt="">
+                    <div class="service1">
+                        <h3>Tắm cho chó</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- footer -->
     <footer>
         <div class="row">
@@ -87,7 +208,7 @@
                 <div class="footer1">
                     <ul>
                         <li>
-                            <img src="./image/logo-removebg.png" alt="photo">
+                            <img src="../image/logo-removebg.png" alt="photo">
                         </li>
                         <li>
                             <p>Hotline: 0345500073</p>
