--- a/html/service.html
+++ b/html/service.html
@@ -159,42 +159,163 @@
         <div class="grid">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="../image/service1.jpg" alt="">
-                    <div class="service1">
-                        <h3>Tắm cho chó</h3>
+                    <div class="service-item">
+                        <img src="../image/service6.jpg" alt="">
+                        <div class="service1">
+                            <h3>Tắm cho chó</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="../image/service1.jpg" alt="">
-                    <div class="service1">
-                        <h3>Tắm cho mèo</h3>
+                    <div class="service-item">
+                        <img src="../image/service7.jpg" alt="">
+                        <div class="service1">
+                            <h3>Tắm cho mèo</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="../image/service1.jpg" alt="">
-                    <div class="service1">
-                        <h3>Kiểm tra sức khỏe</h3>
+                    <div class="service-item">
+                        <img src="../image/service2.jpg" alt="">
+                        <div class="service1">
+                            <h3>Kiểm tra sức khỏe</h3>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="../image/service1.jpg" alt="">
-                    <div class="service1">
-                        <h3>Tắm cho chó</h3>
+                    <div class="service-item">
+                        <img src="../image/service5.jpg" alt="">
+                        <div class="service1">
+                            <h3>Cắt tỉa lông cho chó</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="../image/service1.jpg" alt="">
-                    <div class="service1">
-                        <h3>Tắm cho chó</h3>
+                    <div class="service-item">
+                        <img src="../image/service8.jpg" alt="">
+                        <div class="service1">
+                            <h3>Cắt tỉa lông cho mèo</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="../image/service1.jpg" alt="">
-                    <div class="service1">
-                        <h3>Tắm cho chó</h3>
+                    <div class="service-item">
+                        <img src="../image/service4.jpg" alt="">
+                        <div class="service1">
+                            <h3>Chó mèo tìm sen</h3>
+                        </div>
                     </div>
+                </div>
+            </div>
+            <div class="service-price">
+                <h2 class="title">Bảng giá dịch vụ</h2>
+                <blockquote>
+                    <p>
+                        <span>
+                            Với 5 năm kinh nghiệm trong lĩnh vực chăm sóc, làm đẹp cho thú cưng cùng đội ngũ nhân viên chuyên nghiệp, được đào tạo bài bản, có tình yêu thương động vật, PetCare chắc chắn sẽ làm hài lòng quý khách hàng và những người bạn nhỏ của mình.
+                        </span>
+                    </p>
+                </blockquote>
+                <div class="text">
+                    <p>
+                        <strong>1.DỊCH VỤ TẮM/ VỆ SINH THÂN THỂ/ CẮT TỈA LÔNG THÚ CƯNG</strong>
+                    </p>
+                    <p class="a">a.Lợi ích mang lại</p>
+                    <p>- Làm sạch lông, tai, móng, răng miệng</p>
+                    <p>- Khử mùi</p>
+                    <p>- Giúp lông mềm mượt</p>
+                    <p>- Tránh cá bệnh vi khuẩn về da, lông</p>
+                    <p class="a">* Lưu ý:</p>
+                    <p>
+                        - Không cho thú cưng ăn quá no hoặc chạy nhảy nhiều trước khi đem tới cửa hàng làm dịch vụ. </p>
+                    <p>
+                        - Thông báo ngay những bất thường về tình trạng sức khỏe của thú cưng trước và ngay sau khi làm dịch vụ.
+                    </p>
+                    <p>
+                        - PetCare không tiếp nhận vật nuôi có tiểu sử bệnh hen, co giật hoặc các bệnh về thần kinh.
+                    </p>
+                    <p class="a">b. Quy trình chăm sóc</p>
+                    <p>Bước 1 : Kiểm tra da, lông vật nuôi nhằm xác định tình trạng lông và da của cún cưng.</p>
+                    <p>Bước 2 : Dựa vào bước kiểm tra ban đầu các Groomers sẽ tư vấn các kiểu cắt lông, vệ sinh phù hợp đối với tình trạng cún cho khách lựa chọn.</p>
+                    <p>Bước 3 : Vệ sinh - nhổ lông tai, khử mùi hôi cho thú cưng.</p>
+                    <p>Bước 4 : Cắt - dũa móng</p>
+                    <p>Bước 5 : Cạo vệ sinh bàn chân, lông bụng, hậu môn.</p>
+                    <p>Bước 6 : Gỡ lông rối</p>
+                    <p>Bước 7 : Tắm gội vệ sinh bằng nước ấm</p>
+                    <p>Bước 8 : Vắt tuyến hôi giúp làm giảm mùi cơ thể cho thú cưng .</p>
+
+                    <p>
+                        <strong>2. BẢNG GIÁ</strong>
+                    </p>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th colspan="2" rowspan="2">DỊCH VỤ</th>
+                                <th colspan="3">CHÓ</th>
+                                <th colspan="3">MÈO</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td colspan="2"></td>
+                                <td>1kg - 5kg</td>
+                                <td>5kg - 15kg</td>
+                                <td>> 15kg</td>
+                                <td>1kg - 5kg</td>
+                                <td>5kg - 15kg</td>
+                                <td>5kg - 15kg</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">Tắm spa</td>
+                                <td>150.000</td>
+                                <td>200.000</td>
+                                <td>250.000</td>
+                                <td>100.000</td>
+                                <td>150.000</td>
+                                <td>200.000</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">Cắt tỉa lông</td>
+                                <td colspan="2" class="center">200.000</td>
+                                <td>300.000</td>
+                                <td colspan="2" class="center">150.000</td>
+                                <td>200.000</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="4">Kiểm tra sức khỏe</td>
+                                <td>Lấy mẫu xét nghiệm</td>
+                                <td colspan="3" class="center">200.000</td>
+                                <td colspan="3" class="center">200.000</td>
+                            </tr>
+                            <tr>
+                                <td>Chụp XQ / Siêu âm</td>
+                                <td colspan="3" class="center">250.000</td>
+                                <td colspan="3" class="center">200.000</td>
+                            </tr>
+                            <tr>
+                                <td>Dịch vụ mổ đẻ</td>
+                                <td>300.000</td>
+                                <td>350.000</td>
+                                <td>400.000</td>
+                                <td>300.000</td>
+                                <td colspan="2" class="center">350.000</td>
+                            </tr>
+                            <tr>
+                                <td>Triệt sản</td>
+                                <td colspan="3" class="center">500.000</td>
+                                <td colspan="3" class="center">400.000</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>
+                        <strong>3. LIÊN HỆ ĐẶT DỊCH VỤ</strong>
+                        <p>Để đảm bảo chất lượng dịch vụ, quý khách vui lòng <span>đặt lịch dịch vụ trước</span> bằng một trong các phương thức sau:</p>
+                        <p>- Điền thông tin trên phần đầu trang</p>
+                        <p>- Inbox <span>Facebook: </span><a href="#">https://www.facebook.com/Pet-Shop-112643297260175/</a></p>
+                        <p>- Liên hệ trực tiếp: <span>0968283850</span></p>
+                    </p>
                 </div>
             </div>
         </div>
