--- a/html/service.html
+++ b/html/service.html
@@ -220,7 +220,7 @@
                 </blockquote>
                 <div class="text">
                     <p>
-                        <strong>1.DỊCH VỤ TẮM/ VỆ SINH THÂN THỂ/ CẮT TỈA LÔNG THÚ CƯNG</strong>
+                        <strong>1. DỊCH VỤ TẮM/ VỆ SINH THÂN THỂ/ CẮT TỈA LÔNG THÚ CƯNG</strong>
                     </p>
                     <p class="a">a.Lợi ích mang lại</p>
                     <p>- Làm sạch lông, tai, móng, răng miệng</p>
@@ -332,15 +332,15 @@
                             <img src="../image/logo-removebg.png" alt="photo">
                         </li>
                         <li>
-                            <p>Hotline: 0345500073</p>
+                            <p><span>Hotline:</span> 0345500073</p>
                         </li>
                         <li>
                             <li>
-                                <p>Địa chỉ: 210 Láng, Đống Đa, Hà Nội</p>
+                                <p><span>Địa chỉ:</span> 210 Láng, Đống Đa, Hà Nội</p>
                             </li>
                         </li>
                         <li>
-                            <p>Giờ mở cửa: 9h - 20h từ T2 đến T7</p>
+                            <p><span>Giờ mở cửa:</span> 9h - 20h từ T2 đến T7</p>
                         </li>
                     </ul>
                 </div>
