--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
                             <img src="./image/logo-removebg.png" alt="photo">
                         </li>
                         <li>
-                            <p>Hotline: 0345500073</p>
+                            <p><span>Hotline:</span> 0345500073</p>
                         </li>
                         <li>
                             <li>
-                                <p>Địa chỉ: 210 Láng, Đống Đa, Hà Nội</p>
+                                <p><span>Địa chỉ:</span> 210 Láng, Đống Đa, Hà Nội</p>
                             </li>
                         </li>
                         <li>
-                            <p>Giờ mở cửa: 9h - 20h từ T2 đến T7</p>
+                            <p><span>Giờ mở cửa:</span> 9h - 20h từ T2 đến T7</p>
                         </li>
                     </ul>
                 </div>
