--- a/html/service.html
+++ b/html/service.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PET FAMILY</title>
+    <title>PET FAMILY - DỊCH VỤ</title>
     <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:wght@300;600&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
@@ -49,26 +49,26 @@
         <div class="grid">
             <ul>
                 <li><a class="color-menu" href="../index.html">Trang chủ</a></li>
-                <li class="menu-cha"><a class="color-menu" href="#">Dịch vụ</a>
+                <li class="menu-cha"><a class="color-menu" href="./service.html">Dịch vụ</a>
                     <ul class="menu-con" id="menu-con">
                         <li>
-                            <a href="#" class="color-menu">Cắt tỉa lông chó mèo </a>
+                            <a href="./service.html" class="color-menu">Cắt tỉa lông chó mèo </a>
                         </li>
                         <li>
-                            <a href="#" class="color-menu">Tắm spa chó mèo</a>
+                            <a href="./service.html" class="color-menu">Tắm spa chó mèo</a>
                         </li>
                         <li>
-                            <a href="#" class="color-menu">Chó mèo tìm sen</a>
+                            <a href="./service.html" class="color-menu">Chó mèo tìm sen</a>
                         </li>
                     </ul>
                 </li>
-                <li class="menu-cha"><a class="color-menu" href="#">Sản phẩm</a>
+                <li class="menu-cha"><a class="color-menu" href="./product.html">Sản phẩm</a>
                     <ul class="menu-con" id="menu-con2">
                         <li>
-                            <a href="#" class="color-menu">Sản phẩm cho chó</a>
+                            <a href="./product.html" class="color-menu">Sản phẩm cho chó</a>
                         </li>
                         <li>
-                            <a href="#" class="color-menu">Sản phẩm cho mèo</a>
+                            <a href="./product.html" class="color-menu">Sản phẩm cho mèo</a>
                         </li>
                     </ul>
                 </li>
@@ -405,3 +405,9 @@
             <p>&copy; Copyright PetShop 2020</p>
         </div>
     </footer>
+
+
+    <script src="./Bootstrap/jquery.min.js"></script>
+    <script src="./Bootstrap/popper.min.js"></script>
+    <script src="./Bootstrap/bootstrap.min.js"></script>
+</body>
