--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
                 <li class="menu-cha"><a class="color-menu" href="./html/service.html">Dịch vụ</a>
                     <ul class="menu-con" id="menu-con">
                         <li>
-                            <a href="#" class="color-menu">Cắt tỉa lông chó mèo </a>
+                            <a class="color-menu" href="./html/service.html">Cắt tỉa lông chó mèo </a>
                         </li>
                         <li>
-                            <a href="#" class="color-menu">Tắm spa chó mèo</a>
+                            <a class="color-menu" href="./html/service.html">Tắm spa chó mèo</a>
                         </li>
                         <li>
-                            <a href="#" class="color-menu">Chó mèo tìm sen</a>
+                            <a class="color-menu" href="./html/service.html">Chó mèo tìm sen</a>
                         </li>
                     </ul>
                 </li>
-                <li class="menu-cha"><a class="color-menu" href="#">Sản phẩm</a>
+                <li class="menu-cha"><a class="color-menu" href="./html/product.html">Sản phẩm</a>
                     <ul class="menu-con" id="menu-con2">
                         <li>
-                            <a href="#" class="color-menu">Sản phẩm cho chó</a>
+                            <a href="./html/product.html" class="color-menu">Sản phẩm cho chó</a>
                         </li>
                         <li>
-                            <a href="#" class="color-menu">Sản phẩm cho mèo</a>
+                            <a href="./html/product.html" class="color-menu">Sản phẩm cho mèo</a>
                         </li>
                     </ul>
                 </li>
